색깔 지정 가능

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Trace JSON 목록</h1>
-  <ul id="fileList"></ul>
+  <ol id="fileList"></ol>
 
   <script>
     // 미리 정의된 파일 목록 (자동화할 경우 서버에서 가져오는 방식 필요)
