--- a/viewer.html
+++ b/viewer.html
@@ -107,7 +107,7 @@
             editable:true
           },
           new go.Binding("text").makeTwoWay(),
-          new go.Binding("background", "textColor") // 🟡 텍스트 배경색
+          new go.Binding("background", "color") // 🟡 텍스트 배경색
         )
       );
 
