feat: 폴더 구조 개편

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     files.forEach(file => {
       const li = document.createElement("li");
       const link = document.createElement("a");
-      link.href = `viewer.html?file=build/json_output/${file}`;
+      link.href = `viewer.html?file=build/sequence_diagram/${file}`;
       link.textContent = file;
       li.appendChild(link);
       list.appendChild(li);
