--- a/viewer.html
+++ b/viewer.html
@@ -10,9 +10,24 @@
     html,body{margin:0;height:100%;}
     #myDiagramDiv{width:100%;height:100%;border:1px solid #444;box-sizing:border-box;}
   </style>
+
+  <style>
+    #fileLabel {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 6px 10px;
+      background: #f0f0f0;
+      border: 1px solid #aaa;
+      font-family: sans-serif;
+      font-size: 12px;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 <body>
   <div id="myDiagramDiv"></div>
+  <div id="fileLabel">loading...</div>
 
   <script>
     /* =========================================================
@@ -222,36 +237,86 @@
     /* =========================================================
        LOAD JSON AND AUTO-ADJUST HORIZONTAL GAP
     ========================================================= */
-    function loadData () {
-      const params = new URLSearchParams(window.location.search);
-      const file = params.get("file");
-      if(!file){
-        myDiagram.model = go.Model.fromJson({"class":"go.GraphLinksModel","nodeDataArray":[],"linkDataArray":[]});
-        return;
-      }
+let currentBaseName = "";
+let fileVariants = [];
+let currentFileIndex = 0;
 
-      fetch(file)
-        .then(resp => resp.json())
-        .then(json => {
-          // === Recompute Lifeline X positions ===
-          const GAP = 200; // px, 원하는 간격
-          let idx = 0;
-          json.nodeDataArray.forEach(n => {
-            if(n.isGroup){
-              const y = parseFloat((n.loc||"0 0").split(" ")[1]) || 0;
-              n.loc = (idx * GAP) + " " + y;
-              idx++;
-            }
-          });
+const labelMap = {
+  0: "원본",
+  1: "NEW 버전",
+  2: "OLD 버전"
+};
 
-          myDiagram.model = go.Model.fromJson(json);
-          ensureLifelineHeights();
-        })
-        .catch(err => {
-          console.error("JSON load error:", err);
-          alert("JSON 로드 실패: " + err);
-        });
-    }
+function updateFileLabel(index) {
+  const labelDiv = document.getElementById("fileLabel");
+  labelDiv.textContent = labelMap[index] || "";
+}
+
+function loadDataFromFile(fileName) {
+  fetch(fileName)
+    .then(resp => resp.json())
+    .then(json => {
+      const GAP = 200;
+      let idx = 0;
+      json.nodeDataArray.forEach(n => {
+        if (n.isGroup) {
+          const y = parseFloat((n.loc || "0 0").split(" ")[1]) || 0;
+          n.loc = (idx * GAP) + " " + y;
+          idx++;
+        }
+      });
+
+      myDiagram.model = go.Model.fromJson(json);
+      ensureLifelineHeights();
+
+      updateFileLabel(currentFileIndex);
+    })
+    .catch(err => {
+      console.error("JSON load error:", err);
+      alert("JSON 로드 실패: " + err);
+    });
+}
+
+function loadData() {
+  const params = new URLSearchParams(window.location.search);
+  const file = params.get("file");
+  if (!file) {
+    myDiagram.model = go.Model.fromJson({ "class": "go.GraphLinksModel", "nodeDataArray": [], "linkDataArray": [] });
+    updateFileLabel(-1);
+    return;
+  }
+
+  const match = file.match(/^(.+?)(?:_new|_old)?\.json$/);
+  if (!match) {
+    alert("파일명 형식 오류: xxxx.json, xxxx_new.json, xxxx_old.json 형식 필요");
+    updateFileLabel(-1);
+    return;
+  }
+
+  currentBaseName = match[1];
+  fileVariants = [
+    `${currentBaseName}.json`,
+    `${currentBaseName}_new.json`,
+    `${currentBaseName}_old.json`
+  ];
+  currentFileIndex = 0;
+
+  loadDataFromFile(fileVariants[currentFileIndex]);
+}
+
+window.addEventListener("keydown", (e) => {
+  if (!fileVariants.length) return;
+
+  if (e.key === "ArrowRight") {
+    currentFileIndex = (currentFileIndex + 1) % fileVariants.length;
+    loadDataFromFile(fileVariants[currentFileIndex]);
+  } else if (e.key === "ArrowLeft") {
+    currentFileIndex = (currentFileIndex - 1 + fileVariants.length) % fileVariants.length;
+    loadDataFromFile(fileVariants[currentFileIndex]);
+  }
+});
+
+window.addEventListener("DOMContentLoaded", init);
 
     /* =========================================================
        STARTUP
