파일 일부 없어도 동작하게

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <script>
     // 미리 정의된 파일 목록 (자동화할 경우 서버에서 가져오는 방식 필요)
     const files = [
+      "sample1_unittest_OrderServiceTest.ProcessOrder_InvalidIdThrows.json",
+      "sample1_unittest_OrderServiceTest.ProcessOrder_ValidId.json",
+
+      // JSON 파일 목록
       "sample1_unittest_FactorialTest.Negative.json",
       "sample1_unittest_FactorialTest.Positive.json",
       "sample1_unittest_FactorialTest.Zero.json",
