--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   <script>
     // 미리 정의된 파일 목록 (자동화할 경우 서버에서 가져오는 방식 필요)
     const files = [
-      "sample1_unittest_OrderServiceTest.ProcessOrder_InvalidIdThrows.json",
-      "sample1_unittest_OrderServiceTest.ProcessOrder_ValidId.json",
-
+      "1_unittest_OrderServiceTest.ProcessOrder_InvalidIdThrows.json",
+      "1_unittest_OrderServiceTest.ProcessOrder_ValidId.json",
+      "2_unittest_OrderServiceTest.ProcessOrder_InvalidIdThrows.json",
+      "2_unittest_OrderServiceTest.ProcessOrder_ValidId.json",
+      "3_unittest_OrderServiceTest.ProcessOrder_InvalidIdThrows.json",
+      "3_unittest_OrderServiceTest.ProcessOrder_ValidId.json",
+      "4_unittest_OrderServiceTest.Submit_NormalOrder.json",
       // JSON 파일 목록
       "sample1_unittest_FactorialTest.Negative.json",
       "sample1_unittest_FactorialTest.Positive.json",
